--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello Word</title>
+    <title>Songs Inventory  </title>
 </head>
 <body>
-    <h1>Hello Word</h1>
+    <h1>Welcome to Songs Inventory</h1>
+    <h2>version 1</h2>
+    <a href="/songs">Songs</a>
 </body>
 </html>
